temporary fix of img spacing

--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,6 @@
 
 @layer base {
 	body {
-		margin-top: constant(safe-area-inset-top);
 		margin-top: env(safe-area-inset-top);
 
 		@apply max-w-full touch-none select-none overflow-hidden min-h-screen;
